platform-services/janitor-bot/tests/snapshots/integration__workflow__renovate-failure-retry.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - ensure_labels_exist
          - create_issue
        ran: false
        when: is_failure && !is_renovate
      - actions:
          - close_issue
        ran: false
        when: is_success
    dry_run: false
    name: manage-github-workflow
    variables:
      - name: is_failure
        value: "true"
      - name: is_renovate
        value: "true"
      - name: is_success
        value: "false"
  - action_groups:
      - actions:
          - retry_workflow
        ran: true
    dry_run: false
    name: retry-renovate-workflow
external_requests:
  - method: GET
    path: /repos/Accurate0/inf-k8s/actions/runs/9002/jobs
    service: github
  - method: GET
    path: /repos/Accurate0/inf-k8s/actions/jobs/2001/logs
    service: github
  - method: GET
    path: /repos/Accurate0/inf-k8s/actions/runs/9002/jobs
    service: github
  - method: GET
    path: /repos/Accurate0/inf-k8s/actions/jobs/2001/logs
    service: github
  - method: POST
    path: /repos/Accurate0/inf-k8s/actions/runs/9002/rerun-failed-jobs
    service: github
